1. Filters fix 2. Switching between tabs by swipe 3. Feedback changes 4. Password visibility enability

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -281,9 +281,9 @@ div
 /*CSS for carousel images to make image resposive*/
 .img-responsive
 {
-    display: block;
-    width: 100%;
-    height: 100%;
+   display: inline-block;
+    width: 75%;
+    height:75%;
 
 }
 .image-responsive
@@ -738,7 +738,15 @@ h1
 	   font-size: 30px;
   }
 }
+.ion-arrow-right-b
+{
+    font-size:25px;
+}
+.fa-star-half-o:before
 
+{
+    font-size: 25px;
+}
 .deleteButton
 {
     margin-right: 10px;
@@ -865,6 +873,25 @@ hr.style-one {
     padding-left: 45px;
 }
 
+.ion-eye
+{
+   &:before
+    {
+        font-size: 30px;
+        position: inherit;
+    }
+   
+}
+
+.ion-eye-disabled
+{
+   &:before
+    {
+        font-size: 30px;
+        position: inherit;
+    }
+    
+}
 
 textarea,
 input[type="text"],
@@ -989,7 +1016,7 @@ p
     padding-left: 45px;
     color: #d14836
 }
-
+  
 /* Not sure if following are used on no */
 /* Following attributes may be needed, need to be checked */
 /*
